--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,11 @@
 name = "aoc2024"
 version = "0.1.0"
 edition = "2021"
+default-run = "aoc2024"
 
 [dependencies]
+clap = { version = "4.5.21", features = ["derive"] }
+color-eyre = "0.6.3"
 
 [[bin]]
 name = "day01"
